[workspace]
members = [
  "helix-core",
  "helix-view",
  "helix-term",
  "helix-tui",
  "helix-syntax",
  "helix-lsp",
]

# Build helix-syntax in release mode to make the code path faster in development.
# [profile.dev.package."helix-syntax"]
# opt-level = 3

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
crossterm = { git = "https://github.com/blaggacao/crossterm", branch = "add-csi-u-parser" }
